# configsystem

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: __init__.py  astropy.py  configurable.py  dict_handling.py  exceptions.py  item.py  items.py
config/items/: __init__.py  astropy.py  basic.py  configurable.py  lookup.py  path.py
config/items/tests/: test_astropy_items.py  test_basic.py  test_configurable.py  test_lookup.py  test_path.py
config/tests/: test_configurable.py
tests/: test_astropy_items.py  test_configurable.py  test_configurable_item.py  test_dict_handling.py
