[metadata]
name = config
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
version = attr: config.__version__
long_description = file: README.md
long_description_content_type = "text/markdown"
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
